@@ -35,7 +35,7 @@
 .timeline-horizontal .timeline-highlight-decorator{
 	width:10px;
 	top:0;
-    height:100%;
+  height:100%;
 }
 
 .timeline-vertical .timeline-highlight-point-decorator,
@@ -107,8 +107,6 @@
 .timeline-small-event-icon{
 	position:absolute;
 }
-
-.timeline-event-tape{height:4px;}
 
 .timeline-small-event-tape{height:2px;}
 .timeline-small-event-icon{width:1px; height:6px;}
